test_datasets/generated/syntax_errors/error_3.py
def greet(name):
    message = f"Hello, {name"  # ERROR: Missing closing quote
    return message
